fixed file contrasts

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,7 @@
 *, *::before, *::after {
     box-sizing: border-box;
     font-family: 'Mukta', sans-serif;
-    background-color: #202020;
-    margin: 0;
+    /* background-color: #202020; */
 }
 
 .container {
@@ -11,7 +10,6 @@
     align-items: center;
     padding: 0;
     margin: 0;
-    
 }
 
 .menu-section {
@@ -19,7 +17,7 @@
     margin: 5vh;
     height: 100vh;
     width: 80vw;
-    /* background-color: white; */
+    background-color: white; 
     grid-template-columns: 100%;
     grid-template-rows: 20% 3% auto 3% 10%;
     grid-template-areas: "hd"
@@ -30,8 +28,11 @@
 }
 
 
-#menu-view {                /************* view */
+/************** view **************/
+
+#menu-view {                
     margin-top: 3%;
+    background-color: white;
 }
 
 .menu-view-section {
@@ -48,8 +49,11 @@
 } 
 
 #view-content {
+    
     grid-area: cont;
 }
+
+
 
 #view-footer {
     grid-area: ft;
@@ -84,11 +88,13 @@
 }
 
 #menu-title {
-    background-color: inherit;
+    font-family: 'MyWebFont', Arial, sans-serif;
 }
 
 
-#second-selection {               /* second */   
+/************* second *************/
+
+#second-selection {                  
     margin-top: 3%;
 }
 
@@ -114,7 +120,9 @@
 }
 
 
-#dessert-selection {               /* dessert */   
+/************* dessert *************/
+
+#dessert-selection {                  
     margin-top: 3%;
 }
 
@@ -140,7 +148,9 @@
 }
 
 
-#drinks-selection {               /* drinks */   
+/************* drinks *************/
+
+#drinks-selection {                  
     margin-top: 3%;
 }
 
@@ -166,17 +176,10 @@
 }
 
 
-#confirm-selection {               /* confirm */   
-    margin-top: 3%;
-}
+/************* confirm *************/
 
-.menu-confirm-section {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    background-color: white;
-    margin-bottom: 0;
-    padding: 0;
+#confirm-selection {   
+    margin-top: 3%;   
 }
 
 #confirm-header {
@@ -194,22 +197,22 @@
 
 
 #first-selection {
-    background-color: rgb(104, 194, 1);
+    background-color: white;
 }
 
 #second-selection {
-    background-color: rgb(0, 190, 95);
+    background-color: white;
 }
 
 #dessert-selection {
-    background-color: rgb(0, 61, 141);
+    background-color: white;
 }
 
 #drinks-selection {
-    background-color: rgb(82, 8, 201);
+    background-color: white;
 }
 
 #confirm-selection {
-    background-color: rgb(225, 0, 255);
+    background-color: white;
 }
 
